--- a/public/catalog.html
+++ b/public/catalog.html
@@ -7,7 +7,9 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom right, #000000, #8b0000);
+      background: linear-gradient(135deg, #ff0055, #8b00ff, #0022ff);
+      background-size: 400% 400%;
+      animation: gradientFlow 12s ease infinite;
       color: white;
       display: flex;
       flex-direction: column;
@@ -17,27 +19,40 @@
       padding: 40px 20px;
     }
 
+    @keyframes gradientFlow {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
     .welcome-box {
+      width: 300px;
+      height: 60px;
       text-align: center;
-      margin-bottom: 40px;
-      padding: 20px;
-      background: linear-gradient(to right, #1a1a1a, #8b0000);
+      padding: 10px;
+      background: linear-gradient(to right, #ff00cc, #6600ff, #00ccff);
+      border-left: 5px solid #ff9900;
+      border-right: 5px solid #33ff00;
       border-radius: 16px;
-      box-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
 
     .welcome-box h2 {
       font-weight: bold;
       font-style: italic;
-      font-size: 24px;
-      margin-bottom: 10px;
+      font-size: 14px;
+      margin: 0;
     }
 
     .welcome-box p {
       font-weight: bold;
       font-style: italic;
-      font-size: 18px;
-      line-height: 1.6;
+      font-size: 12px;
+      margin: 2px 0 0 0;
+      line-height: 1.2;
     }
 
     .rotate-kbs {
@@ -50,55 +65,12 @@
       0% { transform: rotateY(0deg); }
       100% { transform: rotateY(360deg); }
     }
-
-    .categories {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-      gap: 15px;
-      width: 100%;
-      max-width: 600px;
-    }
-
-    .category-btn {
-      background: #1a1a1a;
-      border: 2px solid #ff3333;
-      border-radius: 12px;
-      padding: 12px;
-      text-align: center;
-      font-weight: bold;
-      color: white;
-      cursor: pointer;
-      transition: background 0.3s, transform 0.2s;
-    }
-
-    .category-btn:hover {
-      background: #ff3333;
-      transform: scale(1.05);
-    }
   </style>
 </head>
 <body>
   <div class="welcome-box">
     <h2>Хуш омадед ба EKRAN_TJ - <span class="rotate-kbs">KBS</span></h2>
-    <p>
-      Бренди боэътимоди <span class="rotate-kbs">KBS</span> — кафолати <br>
-      равшании аъло ва устуворӣ мебошад
-    </p>
-  </div>
-
-  <div class="categories">
-    <div class="category-btn">iPhone</div>
-    <div class="category-btn">Samsung</div>
-    <div class="category-btn">Redmi</div>
-    <div class="category-btn">Realmi</div>
-    <div class="category-btn">Oppo</div>
-    <div class="category-btn">Vivo</div>
-    <div class="category-btn">Huawei</div>
-    <div class="category-btn">Honor</div>
-    <div class="category-btn">Tecno</div>
-    <div class="category-btn">Infinix</div>
-    <div class="category-btn">ZTE</div>
-    <div class="category-btn">WIKO</div>
+    <p>Бренди боэътимоди KBS — кафолати равшании аъло ва устуворӣ мебошад</p>
   </div>
 </body>
 </html>
