--- a/public/catalog.html
+++ b/public/catalog.html
@@ -3308,20 +3308,17 @@
     if (backButton) backButton.style.display = 'none';
   }
 </script>
-    <!-- Сводка заказа -->
-<div id="order-summary" style="display:none; position:fixed; top:10%; left:5%; right:5%; background:white; padding:20px; border-radius:16px; box-shadow:0 4px 12px rgba(0,0,0,0.3); z-index:1000;">
-    <h2 style="color:#0072ff;">🧾 Ваш заказ</h2>
-    <ul id="order-list" style="margin-bottom:16px;"></ul>
-    <div id="order-total" style="font-weight:bold; margin-bottom:16px;"></div>
-    <textarea id="order-comment" placeholder="Комментарий (необязательно)" style="width:100%; padding:10px; border-radius:10px; border:1px solid #ccc; margin-bottom:16px;"></textarea>
-    <button onclick="sendOrder()" style="background:#0072ff; color:white; padding:10px 20px; border:none; border-radius:10px; font-weight:bold;">📤 Подтвердить заказ</button>
-</div>
 
-<!-- Кнопка внизу для просмотра сводки -->
-<div style="position:fixed; bottom:20px; right:20px; z-index:999;">
-    <button onclick="openSummary()" style="background:#00cc66; color:white; padding:14px 20px; border:none; border-radius:14px; font-size:16px; font-weight:bold;">📋 Просмотреть заказ</button>
+    <!-- Форма оформления заказа -->
+<div id="order-summary" style="display:none; margin-top: 30px; padding: 20px; background: #ffffffdd; border-radius: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+  <h3 style="text-align: center; color: #333;">📋 Сводка заказа</h3>
+  <div id="cart-items" style="margin-bottom: 10px;"></div>
+  <div id="total" style="font-weight: bold; margin-bottom: 10px;"></div>
+  <input type="text" id="client-name" placeholder="👤 Имя клиента" style="width:100%; padding: 10px; margin-bottom: 10px; border-radius: 10px; border: 1px solid #ccc;" />
+  <textarea id="order-comment" placeholder="💬 Комментарий (необязательно)" rows="3" style="width:100%; padding: 10px; border-radius: 10px; border: 1px solid #ccc;"></textarea>
+  <button onclick="sendOrder()" style="margin-top: 15px; width: 100%; background: green; color: white; padding: 12px; border: none; border-radius: 12px; font-size: 16px;">✅ Подтвердить заказ</button>
 </div>
-
+    
 <!-- Подключение JavaScript -->
 <script src="order.js"></script>
 </body>
