--- a/public/catalog.html
+++ b/public/catalog.html
@@ -7,101 +7,180 @@
   <style>
     body {
       font-family: sans-serif;
+      background-color: #eaf6ff;
       margin: 0;
-      background: linear-gradient(to bottom, #00c6ff, #0072ff);
+      padding: 0;
     }
-    .header {
+    header {
+      background: linear-gradient(to right, #00aaff, #0088cc);
+      padding: 15px;
       text-align: center;
-      padding: 20px 10px;
       color: white;
       font-size: 24px;
       font-weight: bold;
+      border-radius: 0 0 20px 20px;
     }
-    .summary-title {
-      background: #0056ff;
-      color: white;
-      padding: 10px;
-      text-align: center;
-      font-size: 18px;
-      border-radius: 20px 20px 0 0;
-      margin: 0 auto;
-      max-width: 90%;
-    }
-    .summary-box {
-      background: #f0f0f0;
-      margin: 10px auto;
-      padding: 15px;
+    .product {
+      background-color: #00bfff;
       border-radius: 20px;
-      max-width: 90%;
-    }
-    .product-card {
-      background: #00bbff;
-      margin: 15px auto;
       padding: 15px;
-      border-radius: 20px;
-      max-width: 90%;
+      margin: 15px;
       color: white;
-    }
-    .product-card input {
-      width: 60px;
-      padding: 5px;
-      margin-left: 10px;
-      border-radius: 5px;
-      border: none;
-    }
-    .product-card button, .close-btn {
-      background: white;
-      color: #0056ff;
-      border: none;
-      padding: 8px 16px;
-      margin-top: 10px;
-      border-radius: 10px;
       font-weight: bold;
+      box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    }
+    .product input {
+      margin-top: 5px;
+      padding: 5px;
+      width: 50px;
+    }
+    button {
+      padding: 10px 15px;
+      border: none;
+      border-radius: 10px;
       cursor: pointer;
     }
-    .alert-box {
-      position: fixed;
-      bottom: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: white;
-      color: #0072ff;
-      padding: 12px 20px;
-      border-radius: 12px;
-      font-size: 14px;
-      font-weight: bold;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    .order-summary {
+      background-color: #f5f5f5;
+      margin: 15px;
+      padding: 15px;
+      border-radius: 20px;
       display: none;
     }
-    .close-btn {
-      display: block;
-      margin: 20px auto 0 auto;
+    .summary-item {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 5px;
+    }
+    .comment-box {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+    }
+    .delete-btn {
+      background-color: red;
+      color: white;
+      border-radius: 10px;
+      padding: 5px 10px;
+      margin-left: 10px;
+    }
+    .add-msg {
+      position: fixed;
+      bottom: 10%;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #d1ffd1;
+      padding: 15px;
+      border-radius: 15px;
+      display: none;
+      box-shadow: 0 0 10px #00000030;
     }
   </style>
 </head>
 <body>
 
-  <div class="header">📱 EKRAN.TJ - KBS</div>
+  <header>📱 EKRAN.TJ - KBS</header>
 
-  <div class="summary-title">📋 Сводка заказа</div>
-
-  <div class="summary-box" id="order-summary">
-    <div><strong>Samsung A10</strong><br>Original<br>Service<br>80</div>
-    <label>Количество: <input type="number" value="1"></label>
-    <button onclick="showThanks()">🛒 Заказать</button>
+  <div class="product" data-model="Samsung A10" data-quality="Original" data-price="100">
+    Samsung A10<br>
+    Качество: Original<br>
+    Цена: 100 сомонӣ<br>
+    Количество: <input type="number" min="1" value="1"> 
+    <button onclick="addToOrder(this)">🛒 Заказать</button>
   </div>
 
-  <div class="alert-box" id="alertBox">
-    🙏 Ташаккур ки моро интихоб кардед!<br>
-    <button class="close-btn" onclick="hideThanks()">❌ Закрыт</button>
+  <div class="product" data-model="Samsung A20" data-quality="OLED" data-price="210">
+    Samsung A20<br>
+    Качество: OLED<br>
+    Цена: 210 сомонӣ<br>
+    Количество: <input type="number" min="1" value="1"> 
+    <button onclick="addToOrder(this)">🛒 Заказать</button>
+  </div>
+
+  <div style="text-align:center;">
+    <button id="toggleSummary" style="background:#0047ff; color:white; margin:10px 0;">📋 Сводка заказа</button>
+  </div>
+
+  <div id="orderSummary" class="order-summary">
+    <h3>🧺 Ваш заказ:</h3>
+    <ul id="orderList" style="list-style-type: disc; padding-left: 20px;"></ul>
+    <p id="totalAmount" style="font-weight: bold;">💰 Общая сумма: 0 сомонӣ</p>
+    <textarea id="comment" class="comment-box" placeholder="Комментарий (необязательно)"></textarea><br><br>
+    <button onclick="submitOrder()" style="background:green; color:white;">✅ Подтвердить заказ</button>
+  </div>
+
+  <div id="addedMessage" class="add-msg">
+    ✅ Товар добавлен в корзину
   </div>
 
   <script>
-    function showThanks() {
-      document.getElementById('alertBox').style.display = 'block';
+    const order = [];
+
+    function addToOrder(button) {
+      const product = button.closest('.product');
+      const model = product.dataset.model;
+      const quality = product.dataset.quality;
+      const price = parseInt(product.dataset.price);
+      const quantity = parseInt(product.querySelector('input').value);
+
+      for (let i = 0; i < quantity; i++) {
+        order.push({ model, quality, price });
+      }
+
+      showAddedMessage();
+      updateOrderSummary();
     }
-    function hideThanks() {
-      document.getElementById('alertBox').style.display = 'none';
+
+    function updateOrderSummary() {
+      const list = document.getElementById('orderList');
+      const totalText = document.getElementById('totalAmount');
+      list.innerHTML = '';
+
+      let total = 0;
+
+      order.forEach((item, index) => {
+const li = document.createElement('li');
+        li.innerHTML = ${item.model} (${item.quality}) x 1 = ${item.price} сомонӣ <button class="delete-btn" onclick="deleteItem(${index})">Удалить</button>;
+        list.appendChild(li);
+        total += item.price;
+      });
+
+      totalText.innerHTML = 💰 Общая сумма: ${total} сомонӣ;
+    }
+
+    function deleteItem(index) {
+      order.splice(index, 1);
+      updateOrderSummary();
+    }
+
+    function showAddedMessage() {
+      const msg = document.getElementById('addedMessage');
+      msg.style.display = 'block';
+      setTimeout(() => {
+        msg.style.display = 'none';
+      }, 1500);
+    }
+
+    document.getElementById('toggleSummary').addEventListener('click', () => {
+      const summary = document.getElementById('orderSummary');
+      summary.style.display = summary.style.display === 'block' ? 'none' : 'block';
+    });
+
+    function submitOrder() {
+      const comment = document.getElementById('comment').value.trim();
+      const orderText = order.map(i => ${i.model} (${i.quality}) x 1 = ${i.price} сомонӣ).join('\n');
+      const total = order.reduce((sum, i) => sum + i.price, 0);
+
+      const message = 📦 Новый заказ:\n\n${orderText}\n\n💰 Общая сумма: ${total} сомонӣ\n📝 Комментарий: ${comment || 'нет'}\n\n✅ Спасибо за заказ!;
+
+      alert(message);
+
+      order.length = 0;
+      document.getElementById('comment').value = '';
+      updateOrderSummary();
+      document.getElementById('orderSummary').style.display = 'none';
     }
   </script>
 
