--- a/public/catalog.html
+++ b/public/catalog.html
@@ -2,85 +2,60 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>📱 Каталог моделей</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <!-- Telegram WebApp SDK -->
+  <title>Каталог</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #e6f2ff;
-      margin: 0;
+      font-family: sans-serif;
+      text-align: center;
       padding: 20px;
     }
-
-    h1 {
-      text-align: center;
-      font-size: 24px;
-    }
-
-    .product {
-      background-color: #00bfff;
-      padding: 15px;
-      margin-bottom: 15px;
-      border-radius: 10px;
-      color: white;
-    }
-
-    .product h2 {
-      margin-top: 0;
-    }
-
-    .product input[type="number"] {
-      width: 60px;
-      padding: 5px;
-      margin-top: 5px;
-    }
-
-    .product button {
-      background-color: #0055ff;
-      color: white;
+    button {
+      padding: 10px 20px;
+      font-size: 18px;
+      margin-top: 20px;
+      background-color: #2fa6ff;
       border: none;
-      padding: 10px 15px;
-      border-radius: 5px;
-      margin-left: 10px;
+      border-radius: 6px;
+      color: white;
       cursor: pointer;
-    }
-
-    .product button:hover {
-      background-color: #0033cc;
     }
   </style>
 </head>
 <body>
+  <h1>🛍 Каталог товаров</h1>
+  <p>Пример товара: Монитор 27"</p>
 
-  <h1>📱 Каталог моделей</h1>
+  <button id="buy">Купить за 2000 сомони</button>
 
-  <div class="product">
-    <h2>Samsung A10</h2>
-    <div>Качество: Original</div>
-    <div>Бренд: KBS</div>
-    <div>💰 Цена: 100</div>
-    <label>Количество:
-      <input type="number" value="1" min="1">
-    </label>
-    <button>🛒 Заказать</button>
-  </div>
+  <script>
+    Telegram.WebApp.ready();
 
-  <div class="product">
-    <h2>Samsung A20</h2>
-    <div>Качество: OLED</div>
-    <div>Бренд: KBS</div>
-    <div>💰 Цена: 210</div>
-    <label>Количество:
-      <input type="number" value="1" min="1">
-    </label>
-    <button>🛒 Заказать</button>
-  </div>
+    const user = Telegram.WebApp.initDataUnsafe.user;
 
-  <!-- Подключаем JS -->
-  <script src="order.js"></script>
+    document.getElementById("buy").addEventListener("click", () => {
+      const order = {
+        product: "Монитор 27\"",
+        price: 1000,
+        quantity: 2,
+        total: 2000,
+        user
+      };
+
+      fetch('/order', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(order)
+      })
+      .then(res => res.json())
+      .then(data => {
+        if (data.success) {
+          Telegram.WebApp.MainButton.setText("✅ Заказ оформлен");
+          Telegram.WebApp.MainButton.show();
+          setTimeout(() => Telegram.WebApp.close(), 3000);
+        }
+      });
+    });
+  </script>
 </body>
 </html>
